synaptic (0.57.10) unstable; urgency=low

  * fix a bug in the skip-taskbar handling (thanks to seb128)
  * fix the column sorting (closes: #361070)
  * use the urgency hint for the conffile prompt (ubuntu: #21898)

 --

synaptic (0.57.9) unstable; urgency=low

  * fix more set_transient() problems with run with --parent-window-id
  * fix problem with fetch window not centered on parent (thanks to
    seb128 and glatzor)
  * if no terminal activity is detected and the terminal is expanded
    set the urgency hint as well (ubuntu: #31436)
  * remove http:// when it was entered as part of the proxy uri
  * include reinstall markings in the "changes" filter
  * fix memory corruption problem

 -- Michael Vogt <mvo@debian.org>  Tue, 28 Feb 2006 09:44:42 +0100

synaptic (0.57.8) unstable; urgency=low

  * po/pl.po: updated Polish translation (thanks to Emilian Nowak)
  * po/it.pl: updated Italian translation (thanks to Marco Colombo)
  * po/ko.pl: updated Korean translation (thanks to Changwoo Ryu)
    (closes: #346546)
  * typo fix in debian/NEWS.Debian (closes: #346130)
  * po/zh_HK.po: removed as requested by Anthony Fok (closes: #346081)
  * typo fix in po/fr.po, thanks to  Filipus Klutiero  (closes: #336999)
  * po/gl.po: added Galician translation (thanks to Nacho Resa)
  * po/es.po: updated Spanish translation 
    (thanks to Francisco Javier F. Serrador)
  * po/th.po: updated Thai Translation (thanks to Isriya Paireepairit)
  * po/fi.po: updated Finnish translation (thanks to Ilkka Tuohela)
  * po/el.po: updated Greek translation (thanks to Kostas Papadimas)
  * fix version number in about dialog (and make sure this is done
    automatically in the future) (closes: #348839)
  * applied patch from Robert Chéramy to fix un-lock problem
    (closes: #334168)
  * added --parent-window-id to make embedding easier
  * wording fixes (malone #22090)
  * only clean the list dir if a update was successful
  * make "mark" the default response in the "Mark change dialog"
  