@@ -3,6 +3,7 @@ synaptic (0.57.10) unstable; urgency=low
   * fix a bug in the skip-taskbar handling (thanks to seb128)
   * fix the column sorting (closes: #361070)
   * use the urgency hint for the conffile prompt (ubuntu: #21898)
+  * better handling of the automatic terminal expanding (ubuntu: #38935)
 
  --
 
